# C-Address-Onboarding-Bridge--Contract

./: .commitlintrc.json  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_SETUP.md  Dockerfile.dev  MIGRATION.md  README.md  SECURITY.md  TESTING.md  WASM_VERIFICATION.md  deploy-config.dev.example.json  deploy-config.mainnet.example.json  deploy-config.testnet.example.json  docker-compose.yml  package-lock.json  package.json  wasm_hash.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  smoke-tests.yml
.husky/: pre-commit
adr/: ADR-001-fee-model.md  ADR-002-asset-whitelist.md  ADR-003-role-separation.md  ADR-004-batch-processing.md  ADR-005-error-handling.md  ADR-006-upgrade-strategy.md
benchmarks/: index.html
contracts/onboarding-bridge/: Cargo.toml
contracts/onboarding-bridge/src/: benchmarks.rs  fee_fuzz_tests.rs  fund_amount_fuzz_tests.rs  integration_tests.rs  lib.rs  tests.rs
contracts/onboarding-bridge/test_snapshots/tests/: test_accrued_fees_accumulate_across_deposits.1.json  test_accrued_fees_batch_accumulate.1.json  (+6 more)
examples/: README.md
examples/javascript/: full-integration.js
examples/typescript/: full-integration.ts  tsconfig.json
scripts/: deploy.ts  estimate-deploy-cost.ts  sign-release.js  verify-release.js
sdk/: API_REFERENCE.md  package.json
sdk/src/: bridge.ts  events.ts  index.ts  offramp.ts  retry.ts  types.ts  validate.ts
sdk/src/__tests__/: bridge.test.ts  events.test.ts  offramp.test.ts  retry.test.ts  scval-encoding.test.ts
