[workspace]
members = ["contracts/onboarding-bridge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "C-Address Onboarding Bridge smart contract for Stellar/Soroban"
license = "MIT"
repository = "https://github.com/C-Address-Onboarding-Bridge/C-Address-Onboarding-Bridge--Contract"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.onboarding-bridge]
opt-level = "z"
codegen-units = 1

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0

[profile.release-debug]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = 0
